syntax = "proto3";

package Demo3;

// define the data type of request
message HelloRequest {
    string name = 1;
}

// define the data type of response
message HelloReply {
    string message = 1;
}

message HelloMessage {
    string msg = 1;
}

// define a service
service HelloWorldService {
    // define the interface and data type
    rpc SayHello (HelloRequest) returns (stream HelloReply) {}
    
    // 创建第二个接口
    rpc GetHelloMsg(HelloRequest) returns (HelloMessage) {}

}